<resources>
    <string name="app_name">Course Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_terms">Terms</string>
    <string name="title_activity_courses">Courses</string>
    <string name="title_activity_assessments">Assessments</string>
    <string name="title_activity_show_term">ShowTermActivity</string>
    <string name="title_activity_add_term">Add Term</string>
    <string name="add_term">Add Term</string>
    <string name="action_delete_term">Delete Term</string>
    <string name="term_deleted">Term deleted.</string>
    <string name="title_activity_show_course">ShowCourseActivity</string>
    <string name="title_activity_show_assessment">ShowAssessmentActivity</string>
    <string name="title_activity_add_course">Add Course</string>
    <string name="course_title">Course Title:</string>
    <string name="add_course">Add Course</string>
    <string name="term_title">Term Title:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="add_course_to_term">Add Course</string>
    <string name="course_start_date">Start Date:</string>
    <string name="course_end_date">End Date:</string>
    <string name="status_text">Status:</string>
    <string name="course_mentor_name">Course Mentor Name:</string>
    <string name="course_mentor_phone">Course Mentor Phone:</string>
    <string name="start_date_show_course">Start Date:</string>
    <string name="end_date_show_course">End Date:</string>
    <string name="status">Status:</string>
    <string name="course_mentor_name_course">Course Mentor Name:</string>
    <string name="course_mentor_phone_number">Course Mentor Phone:</string>
    <string name="course_mentor_email_address">Course Mentor Email:</string>
    <string name="assessments_text">Assessments:</string>
    <string name="term_text">Term:</string>
    <string name="delete_course">Delete Course</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="course_deleted">Course deleted.</string>

    <string-array name="status_array">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>
    <string name="title_activity_add_assessment">Add Assessment</string>
    <string name="assessment_title">Assessment Title:</string>
    <string name="assessment_type">Assessment Type:</string>
    <string name="due_date">Due Date:</string>
    <string name="add_notes">Add Notes</string>

    <string-array name="assessment_type_array">
        <item>Performance Assessment</item>
        <item>Objective Assessment</item>
    </string-array>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_note_editor">New Note</string>
    <string name="new_note">New Note</string>
    <string name="new_note_title">New note</string>
    <string name="save">Save</string>
    <string name="note_updated">Note updated.</string>
    <string name="delete">Delete</string>
    <string name="save_note">Save</string>
    <string name="delete_note">Delete</string>
    <string name="note_deleted">Note deleted.</string>
    <string name="edit_course">Edit Course</string>
    <string name="title_activity_edit_course">Edit Course</string>
    <string name="update_course">Update</string>
    <string name="set_start_end_date_alerts">Set Start/End Date Alerts</string>
    <string name="title_activity_wake_up">Course Alarm</string>
    <string name="set_course_alarms">Set Start Alarm</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="title_activity_edit_assessment">EditAssessmentActivity</string>
    <string name="add_photos">Add Photos</string>
    <string name="title_activity_photos">PhotosActivity</string>
</resources>
