<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_course"
        android:orderInCategory="101"
        android:title="@string/edit_course"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_course"
        android:orderInCategory="102"
        android:title="@string/delete_course"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_assessment"
        android:orderInCategory="103"
        android:title="@string/add_assessment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_notes"
        android:orderInCategory="104"
        android:title="@string/add_notes"
        app:showAsAction="never" />

</menu>