<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.wgu.coursetracker.AddAssessmentActivity"
    tools:showIn="@layout/activity_add_assessment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessment_title"
        android:id="@+id/assessmentTitleText"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/assessmentTitleInput"
        android:textSize="18sp"
        android:layout_toEndOf="@+id/assessmentTitleText"
        android:layout_toRightOf="@+id/assessmentTitleText"
        android:layout_alignBaseline="@+id/assessmentTitleText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessment_type"
        android:id="@+id/assessmentTypeText"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@+id/assessmentTitleText"/>

    <Spinner
        android:id="@+id/assessmentTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/assessmentTypeText"
        android:layout_toRightOf="@+id/assessmentTypeText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@+id/assessmentTypeText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:id="@+id/assessmentDueDateText"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@+id/assessmentTypeText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/assessmentDueDateInput"
        android:textSize="18sp"
        android:layout_toEndOf="@+id/assessmentTitleText"
        android:layout_toRightOf="@+id/assessmentTitleText"
        android:layout_alignBaseline="@+id/assessmentDueDateText" />

    <Button
        android:id="@+id/assessmentCancelButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/button_cancel"
        android:onClick="finishActivity"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/assessmentDueDateText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

    <Button
        android:id="@+id/assessmentAddButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/button_add"
        android:onClick="addAssessment"
        android:layout_below="@+id/assessmentDueDateInput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignTop="@+id/assessmentCancelButton"
        android:layout_alignBottom="@+id/assessmentCancelButton" />

</RelativeLayout>
